# monte-carlo-path-tracer

./: .gitignore  Cargo.toml  README.md
src/: aabb.rs  camera.rs  color.rs  image_data.rs  interval.rs  main.rs  material.rs  noise.rs  onb.rs  pdf.rs  ply.rs  prelude.rs  ray.rs  texture.rs  vec3.rs
src/hittable/: aabb.rs  bvh_node.rs  constant_medium.rs  core.rs  cuboid.rs  hit_record.rs  hittable.rs  hittable_list.rs  mod.rs  quad.rs  rotate_y.rs  sphere.rs  translate.rs  triangle.rs  triangle_mesh.rs  utils.rs
