[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
indicatif = "0.18.3"
rand = "0.9.2"
rayon = "1.11.0"
oidn = { version = "2", optional = true }

[profile.release]
debug = true

[features]
default = []
denoise = ["dep:oidn"]      # Enables OIDN support and denoise pass
save-aovs = []              # Saves albedo/normal AOV images
only-aovs = ["save-aovs"]   # Don't compute color, only AOVs